courses/manifests/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: courses-loadbalancer
spec:
  selector:
    app: courses-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
