courses/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: courses-service
spec:
  selector:
    app: courses-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
