courses/manifests/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: courses-mysql-service
spec:
  type: ClusterIP
  selector:
    app: courses-mysql-app
  ports:
    - port: 3306

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: courses-mysql-statefulset
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: courses-mysql-app
  serviceName: courses-mysql-service
  template:
    metadata:
      labels:
        app: courses-mysql-app
    spec:
      containers:
        - name: courses-mysql-container
          image: mysql:8.0
          ports:
            - containerPort: 3306
          
          volumeMounts:
            - name: pvc
              mountPath: /data/db
              subPath: courses-mysql-app

      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: courses-mysql-pvc
